# wildpalms-conduit-memo

./: CMakeLists.txt  hubmemoreader.cpp  hubmemoreader.h  memo-backend-plugin.json  memo-conduit.json  memobackendplugin.cpp  memobackendplugin.h  memoblobbackend.cpp  memoblobbackend.h  memoconduit.cpp  memoconduit.h  memomapper.cpp  memomapper.h  memomarkdown.cpp  memomarkdown.h  memoview.cpp  memoview.h  notedomainextension.cpp  notedomainextension.h  palmnotetransformation.cpp  palmnotetransformation.h
